<resources>
    <string name="app_name">ShoppingCart</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_product_found">No product found!</string>
    <string name="no_customer_found">No customer found!</string>
    <string name="no_item_found">No item found!</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_of_0_dollor">$0.0</string>
    <string name="label_total">Total Amount</string>
    <string name="label_tax">Tax - 8%</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_card">Card</string>
    <string name="payment_type_paypal">Paypal</string>
    <string name="clear">Clear</string>
    <string name="checkout">Checkout</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="product_description">Product Image</string>
    <string name="qty">qty</string>
    <string name="delete">Delete</string>
    <string name="dialog_title">Title</string>
    <string name="customer_name">customer_name</string>


</resources>
