<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="shop.vav.com.shoppingcart.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="4dp"
        android:orientation="vertical"
        android:paddingRight="4dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/checkout_list_recyclerview"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/primary"
            android:text="@string/no_item_found"
            android:gravity="center"
            android:padding="15dp"
            android:textStyle="italic"
            android:visibility="gone"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_sub_total"
                />
            <TextView
                android:id="@+id/text_view_of_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:text="@string/label_of_0_dollor"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_tax"
                />
            <TextView
                android:id="@+id/text_view_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:text="@string/label_of_0_dollor"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_total"
                />
            <TextView
                android:id="@+id/text_view_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:text="@string/label_of_0_dollor"
                />

        </LinearLayout>

    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/button_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:checked="true"
            android:text="@string/payment_type_cash"
            android:textAllCaps="true"/>
        <RadioButton
            android:id="@+id/button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_card"
            android:textAllCaps="true"/>
        <RadioButton
            android:id="@+id/button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_paypal"
            android:textAllCaps="true"/>
    </RadioGroup>
    <LinearLayout
        style="@style/BarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/margin_padding_tiny"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/clear_cart_button"
            style="@style/BottomBarButton"
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="@dimen/margin_padding_xsmall"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"></View>
        <Button
            android:id="@+id/checkout_cart_button"
            style="@style/BottomBarButton"
            android:text="@string/checkout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
